Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                     <img src="https://cdn.pixabay.com/photo/2014/08/01/16/31/prison-407714_1280.jpg" alt="Persecution of believers">
                     <h3>Time of Persecution</h3>
                     <blockquote>Matthew 24:9: "Then shall they deliver you up to be afflicted, and shall kill you: and ye shall be hated of all nations for my name's sake." <a href="https://globalchristianrelief.org/resources/countries/nigeria/">Learn More</a></blockquote>
+                    <img src="https://www.bbc.com/news/articles/cx2pez2vg8wo?utm_source=firefox-newtab-en-us" alt="Persecution of believers">
                 </div>
                 <div class="card">
                     <img src="https://cdn.pixabay.com/photo/2023/02/23/17/04/ai-generated-7809272_1280.jpg" alt="Plagues, disasters, and famine">
@@ -233,3 +234,4 @@
       </script>
    </body>
 </html>
+
