Fix HTML encoding issues and improve structure

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <nav class="navbar">
-            <h1><b>OUT OF TIME ! ~</b>
-                Matthew 24:44: “Be ready, for the Son of Man is coming...”</h1>
+            
+                <h1>Matthew 24:44: “Be ready, for the Son of Man is coming...”</h1>
             <ul>
                 <li><a href="#intro">Introduction</a></li>
                 <li><a href="#signs">Signs</a></li>
@@ -234,4 +234,5 @@
       </script>
    </body>
 </html>
+
 
